# software-engineering

./: PROMPT_ENHANCER.md  openstack-kubernetes-iam-complete-guide.md  openstack-kubernetes-iam-integration-guide.md
system-trading/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Guide to Developing Multi-Asset System Trading Based on AI Agents.md  Makefile  PROJECT_IMPLEMENTATION.md  README.md  build-images.sh  docker-compose.yml  go.mod  go.sum  prometheus.yml  system-trading-system.md
system-trading/python/: .dockerignore  .env.example  Dockerfile  MONOREPO_ARCHITECTURE.md  Makefile  PROCESS_ARCHITECTURE.md  README.md  ROUTER_ARCHITECTURE.md  docker-compose.yml  pyproject.toml  requirements.txt  run_central_router.py
system-trading/python/agents/: __init__.py
system-trading/python/agents/news_analysis/: __init__.py  agent.py  ai_framework.py  runner.py
system-trading/python/agents/sentiment_analysis/: __init__.py  agent.py  ai_framework.py  runner.py
system-trading/python/agents/technical_analysis/: __init__.py  agent.py  config.py  runner.py
system-trading/python/k8s/: technical-analysis-deployment.yaml
system-trading/python/scripts/: start_agent.py  start_agent.sh  stop_agent.sh
system-trading/python/shared/: __init__.py  a2a_communication.py  base_agent.py  central_router.py  process_manager.py
system-trading/python/supervisor/: technical-analysis.conf
system-trading/python/systemd/: technical-analysis.service
system-trading/python/tests/: __init__.py  test_news_analysis.py  test_sentiment_analysis.py  test_technical_analysis.py
(+84 files in other folders)
